# ebedke-static

./: .gitignore  Makefile  README.md  build.sh  ebedke.json  pyproject.toml
ebedke_static/: main.py
resources/: bootstrap_5_1_3.min.css  menu.json
template/: 404.html.j2  footer.html.j2  header.html.j2  index.html.j2
