[tool.poetry]
name = "ebedke-static"
version = "0.1.0"
description = ""
authors = ["János Illés <hello@ebed.today>"]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.9"
mypy = "^0.910.0"

[tool.poetry.scripts]
generator = 'ebedke_static.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
